# semantic-kernel-workshop

./: README.md  pyproject.toml
01-intro-to-semantic-kernel/: 01-intro.ipynb
02-semantic-kernel-agents/: 02.1-agents copy.ipynb  02.1-agents.ipynb  02.1-single-agents copy.ipynb  02.1-single-agents.ipynb  02.2-agents-chats.ipynb
03-semantic-kernel-mcp/: mcp_server.py
04-process-framework/: 04.1-intro-to-processes.ipynb
05-semantic-kernel-a2a/: 05-semantic-kernel-a2a-tutorial.ipynb
05-semantic-kernel-a2a/flight-booking-agent/: agent.py  agent_executor.py  server.py
05-semantic-kernel-a2a/travel-booking-agent/: agent.py
